# galleryserver

./: .gitignore  LICENSE  README.md  key_generator.py  pyproject.toml
.github/workflows/: build.yml  build_linux.yml  build_windows.yml
galleryserve/: cli.py  license.py  server.py  setup.py  utils.py
galleryserver/: server.py
